; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_extents.c_ext4_ext_search_right.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_extents.c_ext4_ext_search_right.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.ext4_ext_path = type { i32, %struct.ext4_extent_header*, %struct.ext4_extent_idx*, %struct.ext4_extent* }
%struct.ext4_extent_header = type { i32 }
%struct.ext4_extent_idx = type { i32 }
%struct.ext4_extent = type { i64 }
%struct.buffer_head = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"path == NULL *logical %d!\00", align 1
@EIO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [35 x i8] c"first_extent(path[%d].p_hdr) != ex\00", align 1
@.str.2 = private unnamed_addr constant [35 x i8] c"ix != EXT_FIRST_INDEX *logical %d!\00", align 1
@.str.3 = private unnamed_addr constant [38 x i8] c"logical %d < ee_block %d + ee_len %d!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.ext4_ext_path*, i64*, i32*, %struct.ext4_extent**)* @ext4_ext_search_right to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ext4_ext_search_right(%struct.inode* %0, %struct.ext4_ext_path* %1, i64* %2, i32* %3, %struct.ext4_extent** %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.inode*, align 8
  %8 = alloca %struct.ext4_ext_path*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.ext4_extent**, align 8
  %12 = alloca %struct.buffer_head*, align 8
  %13 = alloca %struct.ext4_extent_header*, align 8
  %14 = alloca %struct.ext4_extent_idx*, align 8
  %15 = alloca %struct.ext4_extent*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %7, align 8
  store %struct.ext4_ext_path* %1, %struct.ext4_ext_path** %8, align 8
  store i64* %2, i64** %9, align 8
  store i32* %3, i32** %10, align 8
  store %struct.ext4_extent** %4, %struct.ext4_extent*** %11, align 8
  store %struct.buffer_head* null, %struct.buffer_head** %12, align 8
  %19 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %20 = icmp eq %struct.ext4_ext_path* %19, null
  br i1 %20, label %21, label %28

21:                                               ; preds = %5
  %22 = load %struct.inode*, %struct.inode** %7, align 8
  %23 = load i64*, i64** %9, align 8
  %24 = load i64, i64* %23, align 8
  %25 = call i32 (%struct.inode*, i8*, i64, ...) @EXT4_ERROR_INODE(%struct.inode* %22, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i64 %24)
  %26 = load i32, i32* @EIO, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %6, align 4
  br label %242

28:                                               ; preds = %5
  %29 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %30 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  store i32 %31, i32* %17, align 4
  %32 = load i32*, i32** %10, align 8
  store i32 0, i32* %32, align 4
  %33 = load i32, i32* %17, align 4
  %34 = icmp eq i32 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %28
  %36 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %37 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %36, i32 0, i32 3
  %38 = load %struct.ext4_extent*, %struct.ext4_extent** %37, align 8
  %39 = icmp eq %struct.ext4_extent* %38, null
  br i1 %39, label %40, label %41

40:                                               ; preds = %35
  store i32 0, i32* %6, align 4
  br label %242

41:                                               ; preds = %35, %28
  %42 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %43 = load i32, i32* %17, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %42, i64 %44
  %46 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %45, i32 0, i32 3
  %47 = load %struct.ext4_extent*, %struct.ext4_extent** %46, align 8
  store %struct.ext4_extent* %47, %struct.ext4_extent** %15, align 8
  %48 = load %struct.ext4_extent*, %struct.ext4_extent** %15, align 8
  %49 = call i32 @ext4_ext_get_actual_len(%struct.ext4_extent* %48)
  store i32 %49, i32* %18, align 4
  %50 = load i64*, i64** %9, align 8
  %51 = load i64, i64* %50, align 8
  %52 = load %struct.ext4_extent*, %struct.ext4_extent** %15, align 8
  %53 = getelementptr inbounds %struct.ext4_extent, %struct.ext4_extent* %52, i32 0, i32 0
  %54 = load i64, i64* %53, align 8
  %55 = icmp slt i64 %51, %54
  br i1 %55, label %56, label %109

56:                                               ; preds = %41
  %57 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %58 = load i32, i32* %17, align 4
  %59 = sext i32 %58 to i64
  %60 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %57, i64 %59
  %61 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %60, i32 0, i32 1
  %62 = load %struct.ext4_extent_header*, %struct.ext4_extent_header** %61, align 8
  %63 = call %struct.ext4_extent* @EXT_FIRST_EXTENT(%struct.ext4_extent_header* %62)
  %64 = load %struct.ext4_extent*, %struct.ext4_extent** %15, align 8
  %65 = icmp ne %struct.ext4_extent* %63, %64
  %66 = zext i1 %65 to i32
  %67 = call i64 @unlikely(i32 %66)
  %68 = icmp ne i64 %67, 0
  br i1 %68, label %69, label %76

69:                                               ; preds = %56
  %70 = load %struct.inode*, %struct.inode** %7, align 8
  %71 = load i32, i32* %17, align 4
  %72 = sext i32 %71 to i64
  %73 = call i32 (%struct.inode*, i8*, i64, ...) @EXT4_ERROR_INODE(%struct.inode* %70, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0), i64 %72)
  %74 = load i32, i32* @EIO, align 4
  %75 = sub nsw i32 0, %74
  store i32 %75, i32* %6, align 4
  br label %242

76:                                               ; preds = %56
  br label %77

77:                                               ; preds = %107, %76
  %78 = load i32, i32* %17, align 4
  %79 = add nsw i32 %78, -1
  store i32 %79, i32* %17, align 4
  %80 = icmp sge i32 %79, 0
  br i1 %80, label %81, label %108

81:                                               ; preds = %77
  %82 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %83 = load i32, i32* %17, align 4
  %84 = sext i32 %83 to i64
  %85 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %82, i64 %84
  %86 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %85, i32 0, i32 2
  %87 = load %struct.ext4_extent_idx*, %struct.ext4_extent_idx** %86, align 8
  store %struct.ext4_extent_idx* %87, %struct.ext4_extent_idx** %14, align 8
  %88 = load %struct.ext4_extent_idx*, %struct.ext4_extent_idx** %14, align 8
  %89 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %90 = load i32, i32* %17, align 4
  %91 = sext i32 %90 to i64
  %92 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %89, i64 %91
  %93 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %92, i32 0, i32 1
  %94 = load %struct.ext4_extent_header*, %struct.ext4_extent_header** %93, align 8
  %95 = call %struct.ext4_extent_idx* @EXT_FIRST_INDEX(%struct.ext4_extent_header* %94)
  %96 = icmp ne %struct.ext4_extent_idx* %88, %95
  %97 = zext i1 %96 to i32
  %98 = call i64 @unlikely(i32 %97)
  %99 = icmp ne i64 %98, 0
  br i1 %99, label %100, label %107

100:                                              ; preds = %81
  %101 = load %struct.inode*, %struct.inode** %7, align 8
  %102 = load i64*, i64** %9, align 8
  %103 = load i64, i64* %102, align 8
  %104 = call i32 (%struct.inode*, i8*, i64, ...) @EXT4_ERROR_INODE(%struct.inode* %101, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i64 %103)
  %105 = load i32, i32* @EIO, align 4
  %106 = sub nsw i32 0, %105
  store i32 %106, i32* %6, align 4
  br label %242

107:                                              ; preds = %81
  br label %77

108:                                              ; preds = %77
  br label %226

109:                                              ; preds = %41
  %110 = load i64*, i64** %9, align 8
  %111 = load i64, i64* %110, align 8
  %112 = load %struct.ext4_extent*, %struct.ext4_extent** %15, align 8
  %113 = getelementptr inbounds %struct.ext4_extent, %struct.ext4_extent* %112, i32 0, i32 0
  %114 = load i64, i64* %113, align 8
  %115 = load i32, i32* %18, align 4
  %116 = sext i32 %115 to i64
  %117 = add nsw i64 %114, %116
  %118 = icmp slt i64 %111, %117
  %119 = zext i1 %118 to i32
  %120 = call i64 @unlikely(i32 %119)
  %121 = icmp ne i64 %120, 0
  br i1 %121, label %122, label %133

122:                                              ; preds = %109
  %123 = load %struct.inode*, %struct.inode** %7, align 8
  %124 = load i64*, i64** %9, align 8
  %125 = load i64, i64* %124, align 8
  %126 = load %struct.ext4_extent*, %struct.ext4_extent** %15, align 8
  %127 = getelementptr inbounds %struct.ext4_extent, %struct.ext4_extent* %126, i32 0, i32 0
  %128 = load i64, i64* %127, align 8
  %129 = load i32, i32* %18, align 4
  %130 = call i32 (%struct.inode*, i8*, i64, ...) @EXT4_ERROR_INODE(%struct.inode* %123, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.3, i64 0, i64 0), i64 %125, i64 %128, i32 %129)
  %131 = load i32, i32* @EIO, align 4
  %132 = sub nsw i32 0, %131
  store i32 %132, i32* %6, align 4
  br label %242

133:                                              ; preds = %109
  %134 = load %struct.ext4_extent*, %struct.ext4_extent** %15, align 8
  %135 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %136 = load i32, i32* %17, align 4
  %137 = sext i32 %136 to i64
  %138 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %135, i64 %137
  %139 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %138, i32 0, i32 1
  %140 = load %struct.ext4_extent_header*, %struct.ext4_extent_header** %139, align 8
  %141 = call %struct.ext4_extent* @EXT_LAST_EXTENT(%struct.ext4_extent_header* %140)
  %142 = icmp ne %struct.ext4_extent* %134, %141
  br i1 %142, label %143, label %146

143:                                              ; preds = %133
  %144 = load %struct.ext4_extent*, %struct.ext4_extent** %15, align 8
  %145 = getelementptr inbounds %struct.ext4_extent, %struct.ext4_extent* %144, i32 1
  store %struct.ext4_extent* %145, %struct.ext4_extent** %15, align 8
  br label %226

146:                                              ; preds = %133
  br label %147

147:                                              ; preds = %168, %146
  %148 = load i32, i32* %17, align 4
  %149 = add nsw i32 %148, -1
  store i32 %149, i32* %17, align 4
  %150 = icmp sge i32 %149, 0
  br i1 %150, label %151, label %169

151:                                              ; preds = %147
  %152 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %153 = load i32, i32* %17, align 4
  %154 = sext i32 %153 to i64
  %155 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %152, i64 %154
  %156 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %155, i32 0, i32 2
  %157 = load %struct.ext4_extent_idx*, %struct.ext4_extent_idx** %156, align 8
  store %struct.ext4_extent_idx* %157, %struct.ext4_extent_idx** %14, align 8
  %158 = load %struct.ext4_extent_idx*, %struct.ext4_extent_idx** %14, align 8
  %159 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %160 = load i32, i32* %17, align 4
  %161 = sext i32 %160 to i64
  %162 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %159, i64 %161
  %163 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %162, i32 0, i32 1
  %164 = load %struct.ext4_extent_header*, %struct.ext4_extent_header** %163, align 8
  %165 = call %struct.ext4_extent_idx* @EXT_LAST_INDEX(%struct.ext4_extent_header* %164)
  %166 = icmp ne %struct.ext4_extent_idx* %158, %165
  br i1 %166, label %167, label %168

167:                                              ; preds = %151
  br label %170

168:                                              ; preds = %151
  br label %147

169:                                              ; preds = %147
  store i32 0, i32* %6, align 4
  br label %242

170:                                              ; preds = %167
  %171 = load %struct.ext4_extent_idx*, %struct.ext4_extent_idx** %14, align 8
  %172 = getelementptr inbounds %struct.ext4_extent_idx, %struct.ext4_extent_idx* %171, i32 1
  store %struct.ext4_extent_idx* %172, %struct.ext4_extent_idx** %14, align 8
  %173 = load %struct.ext4_extent_idx*, %struct.ext4_extent_idx** %14, align 8
  %174 = call i32 @ext4_idx_pblock(%struct.ext4_extent_idx* %173)
  store i32 %174, i32* %16, align 4
  br label %175

175:                                              ; preds = %197, %170
  %176 = load i32, i32* %17, align 4
  %177 = add nsw i32 %176, 1
  store i32 %177, i32* %17, align 4
  %178 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %179 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %178, i32 0, i32 0
  %180 = load i32, i32* %179, align 8
  %181 = icmp slt i32 %177, %180
  br i1 %181, label %182, label %206

182:                                              ; preds = %175
  %183 = load %struct.inode*, %struct.inode** %7, align 8
  %184 = load i32, i32* %16, align 4
  %185 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %186 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %185, i32 0, i32 0
  %187 = load i32, i32* %186, align 8
  %188 = load i32, i32* %17, align 4
  %189 = sub nsw i32 %187, %188
  %190 = call %struct.buffer_head* @read_extent_tree_block(%struct.inode* %183, i32 %184, i32 %189, i32 0)
  store %struct.buffer_head* %190, %struct.buffer_head** %12, align 8
  %191 = load %struct.buffer_head*, %struct.buffer_head** %12, align 8
  %192 = call i64 @IS_ERR(%struct.buffer_head* %191)
  %193 = icmp ne i64 %192, 0
  br i1 %193, label %194, label %197

194:                                              ; preds = %182
  %195 = load %struct.buffer_head*, %struct.buffer_head** %12, align 8
  %196 = call i32 @PTR_ERR(%struct.buffer_head* %195)
  store i32 %196, i32* %6, align 4
  br label %242

197:                                              ; preds = %182
  %198 = load %struct.buffer_head*, %struct.buffer_head** %12, align 8
  %199 = call %struct.ext4_extent_header* @ext_block_hdr(%struct.buffer_head* %198)
  store %struct.ext4_extent_header* %199, %struct.ext4_extent_header** %13, align 8
  %200 = load %struct.ext4_extent_header*, %struct.ext4_extent_header** %13, align 8
  %201 = call %struct.ext4_extent_idx* @EXT_FIRST_INDEX(%struct.ext4_extent_header* %200)
  store %struct.ext4_extent_idx* %201, %struct.ext4_extent_idx** %14, align 8
  %202 = load %struct.ext4_extent_idx*, %struct.ext4_extent_idx** %14, align 8
  %203 = call i32 @ext4_idx_pblock(%struct.ext4_extent_idx* %202)
  store i32 %203, i32* %16, align 4
  %204 = load %struct.buffer_head*, %struct.buffer_head** %12, align 8
  %205 = call i32 @extents_brelse(%struct.buffer_head* %204)
  br label %175

206:                                              ; preds = %175
  %207 = load %struct.inode*, %struct.inode** %7, align 8
  %208 = load i32, i32* %16, align 4
  %209 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %8, align 8
  %210 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %209, i32 0, i32 0
  %211 = load i32, i32* %210, align 8
  %212 = load i32, i32* %17, align 4
  %213 = sub nsw i32 %211, %212
  %214 = call %struct.buffer_head* @read_extent_tree_block(%struct.inode* %207, i32 %208, i32 %213, i32 0)
  store %struct.buffer_head* %214, %struct.buffer_head** %12, align 8
  %215 = load %struct.buffer_head*, %struct.buffer_head** %12, align 8
  %216 = call i64 @IS_ERR(%struct.buffer_head* %215)
  %217 = icmp ne i64 %216, 0
  br i1 %217, label %218, label %221

218:                                              ; preds = %206
  %219 = load %struct.buffer_head*, %struct.buffer_head** %12, align 8
  %220 = call i32 @PTR_ERR(%struct.buffer_head* %219)
  store i32 %220, i32* %6, align 4
  br label %242

221:                                              ; preds = %206
  %222 = load %struct.buffer_head*, %struct.buffer_head** %12, align 8
  %223 = call %struct.ext4_extent_header* @ext_block_hdr(%struct.buffer_head* %222)
  store %struct.ext4_extent_header* %223, %struct.ext4_extent_header** %13, align 8
  %224 = load %struct.ext4_extent_header*, %struct.ext4_extent_header** %13, align 8
  %225 = call %struct.ext4_extent* @EXT_FIRST_EXTENT(%struct.ext4_extent_header* %224)
  store %struct.ext4_extent* %225, %struct.ext4_extent** %15, align 8
  br label %226

226:                                              ; preds = %221, %143, %108
  %227 = load %struct.ext4_extent*, %struct.ext4_extent** %15, align 8
  %228 = getelementptr inbounds %struct.ext4_extent, %struct.ext4_extent* %227, i32 0, i32 0
  %229 = load i64, i64* %228, align 8
  %230 = load i64*, i64** %9, align 8
  store i64 %229, i64* %230, align 8
  %231 = load %struct.ext4_extent*, %struct.ext4_extent** %15, align 8
  %232 = call i32 @ext4_ext_pblock(%struct.ext4_extent* %231)
  %233 = load i32*, i32** %10, align 8
  store i32 %232, i32* %233, align 4
  %234 = load %struct.ext4_extent*, %struct.ext4_extent** %15, align 8
  %235 = load %struct.ext4_extent**, %struct.ext4_extent*** %11, align 8
  store %struct.ext4_extent* %234, %struct.ext4_extent** %235, align 8
  %236 = load %struct.buffer_head*, %struct.buffer_head** %12, align 8
  %237 = icmp ne %struct.buffer_head* %236, null
  br i1 %237, label %238, label %241

238:                                              ; preds = %226
  %239 = load %struct.buffer_head*, %struct.buffer_head** %12, align 8
  %240 = call i32 @extents_brelse(%struct.buffer_head* %239)
  br label %241

241:                                              ; preds = %238, %226
  store i32 0, i32* %6, align 4
  br label %242

242:                                              ; preds = %241, %218, %194, %169, %122, %100, %69, %40, %21
  %243 = load i32, i32* %6, align 4
  ret i32 %243
}

declare dso_local i32 @EXT4_ERROR_INODE(%struct.inode*, i8*, i64, ...) #1

declare dso_local i32 @ext4_ext_get_actual_len(%struct.ext4_extent*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local %struct.ext4_extent* @EXT_FIRST_EXTENT(%struct.ext4_extent_header*) #1

declare dso_local %struct.ext4_extent_idx* @EXT_FIRST_INDEX(%struct.ext4_extent_header*) #1

declare dso_local %struct.ext4_extent* @EXT_LAST_EXTENT(%struct.ext4_extent_header*) #1

declare dso_local %struct.ext4_extent_idx* @EXT_LAST_INDEX(%struct.ext4_extent_header*) #1

declare dso_local i32 @ext4_idx_pblock(%struct.ext4_extent_idx*) #1

declare dso_local %struct.buffer_head* @read_extent_tree_block(%struct.inode*, i32, i32, i32) #1

declare dso_local i64 @IS_ERR(%struct.buffer_head*) #1

declare dso_local i32 @PTR_ERR(%struct.buffer_head*) #1

declare dso_local %struct.ext4_extent_header* @ext_block_hdr(%struct.buffer_head*) #1

declare dso_local i32 @extents_brelse(%struct.buffer_head*) #1

declare dso_local i32 @ext4_ext_pblock(%struct.ext4_extent*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
